--- a/po/stellarium/en_GB.po
+++ b/po/stellarium/en_GB.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-12 23:35+0700\n"
-"PO-Revision-Date: 2012-08-16 17:58+0000\n"
-"Last-Translator: Andi Chandler <Unknown>\n"
+"PO-Revision-Date: 2012-08-18 04:03+0000\n"
+"Last-Translator: cjl <Unknown>\n"
 "Language-Team: English (United Kingdom) <en_GB@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-17 04:37+0000\n"
+"X-Launchpad-Export-Date: 2012-08-18 04:39+0000\n"
 "X-Generator: Launchpad (build 15810)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
@@ -3385,7 +3385,7 @@ msgstr "Geocentric equatorial coordinates, equinox of date"
 
 #: src/ui_configurationDialog.h:978
 msgid "Right ascension/Declination (of date)"
-msgstr "Right ascension/Declination (of date)"
+msgstr "Right Ascension/Declination (of date)"
 
 #: src/ui_configurationDialog.h:979
 msgid "Distance"
