update plugins versions

--- a/plugins/Satellites/ChangeLog
+++ b/plugins/Satellites/ChangeLog
@@ -1,4 +1,7 @@
-0.7.2 [2012-07- in progress]
+0.7.3
+Use editable keybindings
+
+0.7.2 [2012-07-26]
 Added "Mark all" and "Mark none" buttons to the satellites import window.
 Added a search/filter feature to the main satellites list.
 Fixed duplicate name confusion on double-clicking a satellite in the list.
