--- a/po/stellarium/stellarium.pot
+++ b/po/stellarium/stellarium.pot
@@ -1,18 +1,21 @@
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR Stellarium's team
+# This file is distributed under the same license as the PACKAGE package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+#
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-09-08 22:14+0700\n"
+"POT-Creation-Date: 2012-09-11 00:30+0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-09-09 12:52+0000\n"
-"X-Generator: Launchpad (build 15914)\n"
-"Language: \n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -156,22 +159,32 @@ msgstr ""
 msgid "Sidereal period: %1 days (%2 a)"
 msgstr ""
 
-#: src/core/modules/Planet.cpp:494
+#: src/core/modules/Planet.cpp:485
+#, qt-format
+msgid "Sidereal day: %1"
+msgstr ""
+
+#: src/core/modules/Planet.cpp:489
+#, qt-format
+msgid "Mean solar day: %1"
+msgstr ""
+
+#: src/core/modules/Planet.cpp:502
 #, qt-format
 msgid "Phase Angle: %1"
 msgstr ""
 
-#: src/core/modules/Planet.cpp:495
+#: src/core/modules/Planet.cpp:503
 #, qt-format
 msgid "Elongation: %1"
 msgstr ""
 
-#: src/core/modules/Planet.cpp:496
+#: src/core/modules/Planet.cpp:504
 #, qt-format
 msgid "Phase: %1"
 msgstr ""
 
-#: src/core/modules/Planet.cpp:497
+#: src/core/modules/Planet.cpp:505
 #, qt-format
 msgid "Illuminated: %1%"
 msgstr ""
@@ -5866,8 +5879,7 @@ msgid ""
 msgstr ""
 
 #: plugins/SolarSystemEditor/src/ui_solarSystemManagerWindow.h:298
-msgid ""
-"You can also reset all changes and return to the default configuration:"
+msgid "You can also reset all changes and return to the default configuration:"
 msgstr ""
 
 #: plugins/SolarSystemEditor/src/ui_solarSystemManagerWindow.h:299
@@ -6028,8 +6040,8 @@ msgstr ""
 #: plugins/Quasars/src/Quasars.cpp:73
 msgid ""
 "A plugin that shows some quasars brighter than 16 visual magnitude. A "
-"catalogue of quasars compiled from 'Quasars and Active Galactic Nuclei' "
-"(13th Ed.) (Veron+ 2010) =2010A&A...518A..10V"
+"catalogue of quasars compiled from 'Quasars and Active Galactic "
+"Nuclei' (13th Ed.) (Veron+ 2010) =2010A&A...518A..10V"
 msgstr ""
 
 #: plugins/Quasars/src/Quasar.cpp:92
@@ -6582,10 +6594,10 @@ msgid ""
 "center, if no source is selected). The plugin can show rise, transit, and "
 "set times, as well as the best epoch of the year (i.e., largest angular "
 "separation from the Sun), the date range when the source is above the "
-"horizon at dark night, and the dates of Acronychal and Cosmical "
-"rise/set.<br>Ephemeris of the Solar-System objects and parallax effects are "
-"taken into account.<br><br> The author thanks Alexander Wolf and Georg Zotti "
-"for their advice.<br><br>Ivan Marti-Vidal (Onsala Space Observatory)"
+"horizon at dark night, and the dates of Acronychal and Cosmical rise/set."
+"<br>Ephemeris of the Solar-System objects and parallax effects are taken "
+"into account.<br><br> The author thanks Alexander Wolf and Georg Zotti for "
+"their advice.<br><br>Ivan Marti-Vidal (Onsala Space Observatory)"
 msgstr ""
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:102
