Launchpad automatic translations update.

--- a/po/stellarium/fr.po
+++ b/po/stellarium/fr.po
@@ -18,13 +18,13 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-20 18:00+0700\n"
-"PO-Revision-Date: 2012-10-24 04:28+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2012-10-27 12:37+0000\n"
+"Last-Translator: Nicolas Martignoni <Unknown>\n"
 "Language-Team: <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-10-26 04:38+0000\n"
+"X-Launchpad-Export-Date: 2012-10-28 04:39+0000\n"
 "X-Generator: Launchpad (build 16194)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -3687,7 +3687,7 @@ msgstr "Utiliser cette heure du jour lors du démarrage de Stellarium"
 
 #: src/ui_configurationDialog.h:1034
 msgid "System date at:"
-msgstr "À cette heure du jour :"
+msgstr "Cette heure du jour :"
 
 #: src/ui_configurationDialog.h:1036
 msgid "Use a specific date and time when Stellarium starts up"
