--- a/po/stellarium/ar.po
+++ b/po/stellarium/ar.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-28 15:59+0700\n"
-"PO-Revision-Date: 2012-10-24 04:18+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2012-10-30 04:25+0000\n"
+"Last-Translator: Khalid AlAjaji <Unknown>\n"
 "Language-Team: Arabic <ar@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-10-29 04:38+0000\n"
-"X-Generator: Launchpad (build 16194)\n"
+"X-Launchpad-Export-Date: 2012-10-30 04:42+0000\n"
+"X-Generator: Launchpad (build 16206)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -555,11 +555,11 @@ msgstr "CTRL + نقرة يسرى"
 
 #: src/gui/HelpDialog.cpp:149
 msgid "F7"
-msgstr ""
+msgstr "F7"
 
 #: src/gui/HelpDialog.cpp:150
 msgid "Show and edit all keyboard shortcuts"
-msgstr ""
+msgstr "حرِّر جميع اختصارات لوحة المفاتيح"
 
 #: src/gui/HelpDialog.cpp:156
 msgid "Further Reading"
@@ -2513,19 +2513,19 @@ msgstr "أضف أسبوعاً شمسياً واحداً"
 
 #: src/translations.h:495
 msgid "Add 1 synodic month"
-msgstr ""
+msgstr "أضف شهراً اقترانياً واحداً"
 
 #: src/translations.h:496
 msgid "Add 1 draconic month"
-msgstr ""
+msgstr "أضف شهراً تنِّينيّاً واحداً"
 
 #: src/translations.h:497
 msgid "Add 1 anomalistic month"
-msgstr ""
+msgstr "أضف شهراً  حضيضيّاً واحداً"
 
 #: src/translations.h:498
 msgid "Add 1 mean tropical month"
-msgstr ""
+msgstr "أضف شهراً مدارياً واحداً"
 
 #: src/translations.h:499
 msgid "Add 1 draconic year"
@@ -2617,19 +2617,19 @@ msgstr "اطرح أسبوعاً شمسياً واحداً"
 
 #: src/translations.h:521
 msgid "Subtract 1 synodic month"
-msgstr ""
+msgstr "اطرح شهراً اقترانياً واحداً"
 
 #: src/translations.h:522
 msgid "Subtract 1 draconic month"
-msgstr ""
+msgstr "اطرح شهراً تنِّينيّاً واحداً"
 
 #: src/translations.h:523
 msgid "Subtract 1 anomalistic month"
-msgstr ""
+msgstr "اطرح شهراً حضيضيّاً واحداً"
 
 #: src/translations.h:524
 msgid "Subtract 1 mean tropical month"
-msgstr ""
+msgstr "اطرح شهراً مداريّاً واحداً"
 
 #: src/translations.h:525
 msgid "Subtract 1 draconic year"
