--- a/po/stellarium-skycultures/be.po
+++ b/po/stellarium-skycultures/be.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-28 15:59+0700\n"
-"PO-Revision-Date: 2012-07-14 13:30+0000\n"
+"PO-Revision-Date: 2012-10-29 16:15+0000\n"
 "Last-Translator: 375gnu <Unknown>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-10-29 04:50+0000\n"
-"X-Generator: Launchpad (build 16194)\n"
+"X-Launchpad-Export-Date: 2012-10-30 04:42+0000\n"
+"X-Generator: Launchpad (build 16206)\n"
 "X-Poedit-Country: BELARUS\n"
 "X-Poedit-Language: Belarusian\n"
 "X-Poedit-SourceCharset: utf-8\n"
@@ -62,7 +62,7 @@ msgstr "Туманнасьць Бадэ"
 
 #: nebulae/default/ngc2000names.dat:123
 msgid "Cigar Galaxy"
-msgstr ""
+msgstr "Ґаляктыка «Цыґара»"
 
 #: nebulae/default/ngc2000names.dat:124 nebulae/default/ngc2000names.dat:125
 #: nebulae/default/ngc2000names.dat:126 nebulae/default/ngc2000names.dat:127
@@ -95,7 +95,7 @@ msgstr "Туманнасьць «Каліфорнія»"
 
 #: nebulae/default/ngc2000names.dat:134
 msgid "Centaurus A"
-msgstr ""
+msgstr "Цэнтаўр A"
 
 #: nebulae/default/ngc2000names.dat:135
 msgid "Christmas Tree cluster"
@@ -166,7 +166,7 @@ msgstr "Вялікае скопішча ў Гекулесе"
 
 #: nebulae/default/ngc2000names.dat:159
 msgid "Andromeda Galaxy"
-msgstr ""
+msgstr "Ґаляктыка «Андрамэда»"
 
 #: nebulae/default/ngc2000names.dat:160
 msgid "Great Nebula in Orion"
