--- a/po/stellarium-skycultures/zh_CN.po
+++ b/po/stellarium-skycultures/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-28 15:59+0700\n"
-"PO-Revision-Date: 2012-10-28 08:52+0000\n"
+"PO-Revision-Date: 2012-10-31 05:22+0000\n"
 "Last-Translator: 罗佳伟 <luojiaweil@gmail.com>\n"
 "Language-Team: Chinese (China) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-10-29 04:58+0000\n"
-"X-Generator: Launchpad (build 16194)\n"
+"X-Launchpad-Export-Date: 2012-11-01 04:34+0000\n"
+"X-Generator: Launchpad (build 16218)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -59,7 +59,7 @@ msgstr "波得星云"
 
 #: nebulae/default/ngc2000names.dat:123
 msgid "Cigar Galaxy"
-msgstr ""
+msgstr "雪茄星系"
 
 #: nebulae/default/ngc2000names.dat:124 nebulae/default/ngc2000names.dat:125
 #: nebulae/default/ngc2000names.dat:126 nebulae/default/ngc2000names.dat:127
@@ -92,7 +92,7 @@ msgstr "加利福尼亚星云"
 
 #: nebulae/default/ngc2000names.dat:134
 msgid "Centaurus A"
-msgstr ""
+msgstr "半人马座A"
 
 #: nebulae/default/ngc2000names.dat:135
 msgid "Christmas Tree cluster"
@@ -163,7 +163,7 @@ msgstr "武仙座球状星团"
 
 #: nebulae/default/ngc2000names.dat:159
 msgid "Andromeda Galaxy"
-msgstr ""
+msgstr "仙女座星系"
 
 #: nebulae/default/ngc2000names.dat:160
 msgid "Great Nebula in Orion"
