--- a/po/stellarium/zh_CN.po
+++ b/po/stellarium/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-28 15:59+0700\n"
-"PO-Revision-Date: 2012-10-29 05:35+0000\n"
+"PO-Revision-Date: 2012-10-31 05:32+0000\n"
 "Last-Translator: 罗佳伟 <luojiaweil@gmail.com>\n"
 "Language-Team: Chinese (Hong Kong) <zh_HK@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-10-30 04:42+0000\n"
-"X-Generator: Launchpad (build 16206)\n"
+"X-Launchpad-Export-Date: 2012-11-01 04:34+0000\n"
+"X-Generator: Launchpad (build 16218)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -1146,7 +1146,7 @@ msgstr "赫克托(小行星624号)"
 #. TRANSLATORS: Asteroid (20000) Varuna
 #: src/translations.h:133
 msgid "Varuna"
-msgstr "伐楼拿"
+msgstr "伐楼那"
 
 #. TRANSLATORS: Asteroid (136472) Makemake
 #: src/translations.h:135
@@ -6179,7 +6179,7 @@ msgstr "类星体显示模式"
 
 #: plugins/Quasars/src/ui_quasarsDialog.h:257
 msgid "Plot all quasars without labels"
-msgstr "显示所有类星体且不带标签"
+msgstr "显示所有类星体但不带标签"
 
 #: plugins/Quasars/src/ui_quasarsDialog.h:259
 msgid "Enable display of distribution for quasars"
@@ -6249,7 +6249,7 @@ msgstr "周年视差：%1 毫弧秒"
 #: plugins/Pulsars/src/Pulsar.cpp:174
 #, qt-format
 msgid "Distance based on electron density model: %1 kpc (%2 ly)"
-msgstr "基于电子密度分布模型计算的距离：%1 千秒差距（%2 光年）"
+msgstr "基于电子密度分布模型估算的距离：%1 千秒差距（%2 光年）"
 
 #: plugins/Pulsars/src/Pulsar.cpp:178
 #, qt-format
@@ -6374,7 +6374,7 @@ msgstr "脉冲星显示模式"
 
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:257
 msgid "Plot all pulsars without labels"
-msgstr "显示所有脉冲星且不带标签"
+msgstr "显示所有脉冲星但不带标签"
 
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:259
 msgid "Enable display of distribution for pulsars"
@@ -6500,7 +6500,7 @@ msgid ""
 "configuration window"
 msgstr ""
 "本插件提供观测条件（升起、落下和中天）的分析，以及目标在一年中的最佳观测时间。插件假定在夜间处于地平线上方的对象为可观测的。同时，插件还提供了目标对太阳的"
-"大距、日没和偕日升/落时间。<br><br>关于插件显示内容的具体说明可以在配置窗口的“关于”中找到。"
+"大距、日没升/日出落(冲日)和偕日升/偕日落(合日)时间。<br><br>关于插件显示内容的具体说明可以在配置窗口的“关于”中找到。"
 
 #: plugins/Observability/src/Observability.cpp:187
 msgctxt "short month name"
@@ -6624,7 +6624,7 @@ msgstr "对象不可见"
 
 #: plugins/Observability/src/Observability.cpp:561
 msgid "No Acronychal nor Cosmical rise/set."
-msgstr "无日没或偕日升/落"
+msgstr "无日没升/日出落(冲日)或偕日升/偕日落(合日)"
 
 #: plugins/Observability/src/Observability.cpp:578
 msgid "Greatest elongation: "
@@ -6641,19 +6641,19 @@ msgstr " (在 %1 度)"
 
 #: plugins/Observability/src/Observability.cpp:602
 msgid "Acronychal rise/set"
-msgstr "冲日升/落"
+msgstr "日没升/日出落(冲日)"
 
 #: plugins/Observability/src/Observability.cpp:602
 msgid "No Acronychal rise/set."
-msgstr "无日没升/落"
+msgstr "无日没升/日出落(冲日)"
 
 #: plugins/Observability/src/Observability.cpp:603
 msgid "Cosmical rise/set"
-msgstr "偕日升/落"
+msgstr "偕日升/偕日落(合日)"
 
 #: plugins/Observability/src/Observability.cpp:603
 msgid "No Cosmical rise/set."
-msgstr "无偕日升/落"
+msgstr "无偕日升/偕日落(合日)"
 
 #: plugins/Observability/src/Observability.cpp:649
 msgid "Observable during the whole year."
@@ -6720,7 +6720,7 @@ msgstr ""
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:104
 msgid "Today ephemeris:"
-msgstr "今日星历表"
+msgstr "本日星历表"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:104
 msgid ""
@@ -6732,7 +6732,7 @@ msgstr "顾名思义。这个程序会显示天体的升落、中天时间。这
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:105
 msgid "Acronychal/Cosmical rise/set:"
-msgstr "日没/偕日 升/落:"
+msgstr "日没升/日出落(冲日) 偕日升/偕日落(合日)："
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:105
 msgid ""
@@ -6816,11 +6816,11 @@ msgstr "显示设置"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:342
 msgid "Today's ephemeris (rise, set, and transit times)"
-msgstr "今日星历表(升、落和中天)"
+msgstr "本日星历表(升、落和中天)"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:343
 msgid "Dates of Acronychal and Cosmical rise/set"
-msgstr "日没和偕日升/落日期"
+msgstr "日没升/日出落(冲日)和偕日升/偕日落(合日)日期"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:344
 msgid "Date of largest separation to the Sun"
